# notashell

./: .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix
examples/: config.kdl  style-reference.css
resources/: style.css
src/: config.rs  daemon.rs  main.rs
src/app/: audio.rs  mod.rs  shortcuts.rs
src/controls/: audio.rs  mod.rs  volume.rs
src/dbus/: network_manager.rs
src/ui/: controls_panel.rs  header.rs  mixer.rs  mixer_row.rs  mod.rs  network_list.rs  window.rs
