[package]
name = "notashell"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11.9"
futures-util = "0.3"
gtk4 = { version = "0.10.3", features = ["v4_12"] }
gtk4-layer-shell = "0.7.1"
libpulse-binding = "2.30.1"
libpulse-glib-binding = "2.29.0"
log = "0.4.29"
memmap2 = "0.9.10"
rustix = "1.1.3"
kdl = "6"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
wayland-protocols-wlr = "0.3.10"
zbus = "5.13.2"
